# nikfemm

./: .gitignore  .gitmodules  .vscode-ctags  CMakeLists.txt  README.md
examples/current_density_test/: CMakeLists.txt  main.cpp
examples/gradient_descent_design_optimization/: CMakeLists.txt  main.cpp
examples/integration_test/: CMakeLists.txt  main.cpp
examples/magnet_dynamic_simulation/: CMakeLists.txt  main.cpp
examples/mtest/: CMakeLists.txt  main.cpp
examples/multilayer_current_density_test/: CMakeLists.txt  main.cpp
examples/test/: CMakeLists.txt  main.cpp
lib/nikfemm/: CMakeLists.txt
lib/nikfemm/include/: constants.hpp  nikfemm.hpp  simulation.hpp
lib/nikfemm/lib/triangle/: CMakeLists.txt  triangle.cpp  triangle.h
lib/nikfemm/src/: constants.hpp  drawing.cpp  drawing.hpp  drawing_region.cpp  drawing_region.hpp  drawing_segment.hpp  mesh.cpp  mesh.hpp  mesh_objects.cpp  mesh_objects.hpp  simulation.cpp  unique_bimap.hpp
lib/nikfemm/src/algebra/: build_coo.hpp  coo.cpp  coo.hpp  csr.cpp  csr.hpp  math.cpp  math.hpp  non_linear.cpp  non_linear.hpp  simple_vector.cpp  simple_vector.hpp  solvers.cpp  solvers.hpp  sss.cpp  sss.hpp  system.hpp
lib/nikfemm/src/current_density/: algebra.hpp  mesh.cpp  mesh.hpp  multilayer_simulation.cpp  multilayer_simulation.hpp  properties.cpp  properties.hpp  simulation.cpp  simulation.hpp
lib/nikfemm/src/drawing/: drawing.cpp  drawing.hpp  drawing_region.cpp  drawing_region.hpp  drawing_segment.hpp
lib/nikfemm/src/geometry/: circle.cpp  circle.hpp  common.hpp  geometry_common.hpp  point.cpp  point.hpp  polygon.cpp  polygon.hpp  segment.cpp  segment.hpp  vector.cpp  vector.hpp
lib/nikfemm/src/magnetostatic/: algebra.cpp  algebra.hpp  magnetostatic_algebra.cpp  magnetostatic_algebra.hpp  mesh.cpp  mesh.hpp  properties.cpp  properties.hpp  simulation.cpp  simulation.hpp  vertex.cpp  vertex.hpp
lib/nikfemm/src/matrix/: coo.cpp  coo.hpp  csr.cpp  csr.hpp  simple_vector.cpp  simple_vector.hpp
lib/nikfemm/src/mesh/: edge.cpp  edge.hpp  element.cpp  element.hpp  mesh.cpp  mesh.hpp  triangle_element.cpp  triangle_element.hpp  triangle_vertex.cpp  triangle_vertex.hpp  vertex.cpp  vertex.hpp
lib/nikfemm/src/triangle/: triangle.cpp  triangle.h  util.cpp  util.h
lib/nikfemm/src/utils/: utils.cpp  utils.hpp
lib/nikfemm/test/: CMakeLists.txt  unit_tests.cpp
python/: .gitignore  nikfemm.cpp  setup.py  test.py
src/: main.cpp
