cmake_minimum_required(VERSION 3.5.0)
project(nikfemm)
add_subdirectory(lib/nikfemm)
add_subdirectory(examples/test)
add_subdirectory(examples/mtest)
add_subdirectory(examples/integration_test)
add_subdirectory(examples/magnet_dynamic_simulation)
add_subdirectory(examples/gradient_descent_design_optimization)
add_subdirectory(examples/current_density_test)
add_subdirectory(examples/multilayer_current_density_test)